plugins {
    id 'net.fabricmc.fabric-loom' version "${loom_version}"
    id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

base { archivesName = project.archives_base_name }

repositories {
    maven { url = 'https://maven.terraformersmc.com/' }
    maven { url = 'https://maven.isxander.dev/releases' }
    maven { url = 'https://api.modrinth.com/maven' }
}

dependencies {
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    implementation "net.fabricmc:fabric-loader:${project.loader_version}"
    implementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"

    // ModMenu for config button integration
    implementation "com.terraformersmc:modmenu:${project.mod_menu_version}"

    // test deps — patterns test doesn't touch minecraft, just pure java
    testImplementation 'org.junit.jupiter:junit-jupiter:5.12.1'
    testRuntimeOnly 'org.junit.platform:junit-platform-console-standalone:1.12.1'
}

test {
    useJUnitPlatform()
    enabled = false
}

tasks.register('unitTest', JavaExec) {
    group = 'verification'
    description = 'Runs tests through the JUnit console launcher.'
    dependsOn testClasses
    classpath = sourceSets.test.runtimeClasspath
    mainClass = 'org.junit.platform.console.ConsoleLauncher'
    args 'execute', '--scan-classpath', '--fail-if-no-tests'
}

tasks.register('roomCheck', JavaExec) {
    group = 'verification'
    description = 'Checks the bundled dungeon room fingerprints.'
    dependsOn classes
    classpath = sourceSets.main.runtimeClasspath
    mainClass = 'com.froggylord.constellation.data.RoomCheck'
}

check.dependsOn unitTest

loom {
    accessWidenerPath = file("src/main/resources/constellation.accesswidener")

    runs {
        client {
            client()
            configName = "Constellation Client"
            ideConfigGenerated = true
            runDir = "run"
        }
    }
}

processResources {
    inputs.property "version", project.version
    filesMatching("fabric.mod.json") {
        expand "version": project.version
    }
}

tasks.withType(JavaCompile).configureEach {
    it.options.release = 25
}

java {
    withSourcesJar()
    sourceCompatibility = JavaVersion.VERSION_25
    targetCompatibility = JavaVersion.VERSION_25
}

jar {
    from("LICENSE") {
        rename { "${it}_${project.findProperty('archives_base_name')}" }
    }
}
